src/parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program global_var_declaration
   3          | program function_declaration

   4  var_declaration : ID COLON n2n_type
   5                  | ID COLON complex_type ASSIGN LBRACE formal_list RBRACE
   6                  | expr ASSIGN expr
   7                  | ID COLON complex_type ASSIGN expr
   8                  | ID COLON primitive_type ASSIGN expr

   9  global_var_declaration : var_declaration TERMINATION

  10  n2n_type : primitive_type
  11           | complex_type

  12  primitive_type : INT
  13                 | STRING
  14                 | DOUBLE
  15                 | BOOL

  16  complex_type : GRAPH
  17               | NODE
  18               | REL

  19  function_declaration : FUNCTION ID LPAREN formal_parameters RPAREN ARROW return_type LBRACE statements RBRACE

  20  formal_parameters :
  21                    | formal_list

  22  formal_list : parameter
  23              | formal_list COMMA parameter

  24  parameter : ID COLON type_spec

  25  type_spec : n2n_type
  26            | LIST LT n2n_type GT

  27  return_type : type_spec
  28              | VOID

  29  statements :
  30             | statements statement

  31  statement : expr TERMINATION
  32            | RETURN expr TERMINATION
  33            | LBRACE statements RBRACE
  34            | IF LPAREN expr RPAREN statement
  35            | IF LPAREN expr RPAREN statement ELSE statement
  36            | var_declaration TERMINATION

  37  expr : literal
  38       | complex_literal
  39       | binary_operation
  40       | unary_operation
  41       | ID
  42       | ID LPAREN actuals_opt RPAREN
  43       | built_in_function_call
  44       | LPAREN expr RPAREN
  45       | ID ACCESS ID

  46  literal : INT_LITERAL
  47          | STRING_LITERAL
  48          | DOUBLE_LITERAL
  49          | BOOL_LITERAL

  50  complex_literal : node_or_rel_literal
  51                  | LPAREN graph_component_list RPAREN

  52  graph_component : graph_type graph_type graph_type

  53  graph_component_list :
  54                       | graph_component_list COMMA graph_component

  55  graph_type : ID
  56             | node_or_rel_literal

  57  node_or_rel_literal : ID LBRACKET literal_list RBRACKET

  58  literal_list :
  59               | literal
  60               | literal_list COMMA literal

  61  actuals_opt :
  62              | actuals_list

  63  actuals_list : expr
  64               | actuals_list COMMA expr

  65  binary_operation : expr PLUS expr
  66                   | expr MINUS expr
  67                   | expr TIMES expr
  68                   | expr DIVIDE expr
  69                   | expr MOD expr
  70                   | expr EQ expr
  71                   | expr NEQ expr
  72                   | expr LT expr
  73                   | expr LEQ expr
  74                   | expr GT expr
  75                   | expr GEQ expr
  76                   | expr AND expr
  77                   | expr OR expr
  78                   | expr CONCAT expr
  79                   | expr GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN
  80                   | expr GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN
  81                   | expr DATA_INSERT expr
  82                   | expr DATA_REMOVE expr

  83  unary_operation : NOT expr
  84                  | MINUS expr

  85  built_in_function_call : ID ACCESS find_many
  86                         | ID ACCESS map_function
  87                         | ID ACCESS neighbors_function

  88  map_function : MAP LPAREN ID IN LBRACE statements RBRACE RPAREN

  89  neighbors_function : NEIGHBORS LPAREN ID RPAREN

  90  find_many : FINDMANY LPAREN node_or_rel_literal RPAREN
  91            | FINDMANY LPAREN graph_type COMMA graph_type RPAREN

  92  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (92)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . global_var_declaration  (2)
	program : program . function_declaration  (3)
	%entry% : '\001' program .  (92)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	FUNCTION  shift 7
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 10
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	$end  reduce 92

	global_var_declaration  goto 13
	function_declaration  goto 14
	var_declaration  goto 15
	expr  goto 16
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 4
	expr : LPAREN . expr RPAREN  (44)
	complex_literal : LPAREN . graph_component_list RPAREN  (51)
	graph_component_list : .  (53)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	RPAREN  reduce 53
	COMMA  reduce 53

	expr  goto 24
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22
	graph_component_list  goto 25


state 5
	unary_operation : MINUS . expr  (84)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 26
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 6
	unary_operation : NOT . expr  (83)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 27
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 7
	function_declaration : FUNCTION . ID LPAREN formal_parameters RPAREN ARROW return_type LBRACE statements RBRACE  (19)

	ID  shift 28
	.  error


state 8
	literal : INT_LITERAL .  (46)

	.  reduce 46


state 9
	literal : STRING_LITERAL .  (47)

	.  reduce 47


state 10
	var_declaration : ID . COLON n2n_type  (4)
	var_declaration : ID . COLON complex_type ASSIGN LBRACE formal_list RBRACE  (5)
	var_declaration : ID . COLON complex_type ASSIGN expr  (7)
	var_declaration : ID . COLON primitive_type ASSIGN expr  (8)
	expr : ID .  (41)
	expr : ID . LPAREN actuals_opt RPAREN  (42)
	expr : ID . ACCESS ID  (45)
	node_or_rel_literal : ID . LBRACKET literal_list RBRACKET  (57)
	built_in_function_call : ID . ACCESS find_many  (85)
	built_in_function_call : ID . ACCESS map_function  (86)
	built_in_function_call : ID . ACCESS neighbors_function  (87)

	LPAREN  shift 29
	LBRACKET  shift 30
	COLON  shift 31
	ACCESS  shift 32
	TERMINATION  reduce 41
	ASSIGN  reduce 41
	CONCAT  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	TIMES  reduce 41
	DIVIDE  reduce 41
	MOD  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	GRAPH_INSERT  reduce 41
	GRAPH_REMOVE  reduce 41
	DATA_INSERT  reduce 41
	DATA_REMOVE  reduce 41


state 11
	literal : DOUBLE_LITERAL .  (48)

	.  reduce 48


state 12
	literal : BOOL_LITERAL .  (49)

	.  reduce 49


state 13
	program : program global_var_declaration .  (2)

	.  reduce 2


state 14
	program : program function_declaration .  (3)

	.  reduce 3


state 15
	global_var_declaration : var_declaration . TERMINATION  (9)

	TERMINATION  shift 33
	.  error


state 16
	var_declaration : expr . ASSIGN expr  (6)
	binary_operation : expr . PLUS expr  (65)
	binary_operation : expr . MINUS expr  (66)
	binary_operation : expr . TIMES expr  (67)
	binary_operation : expr . DIVIDE expr  (68)
	binary_operation : expr . MOD expr  (69)
	binary_operation : expr . EQ expr  (70)
	binary_operation : expr . NEQ expr  (71)
	binary_operation : expr . LT expr  (72)
	binary_operation : expr . LEQ expr  (73)
	binary_operation : expr . GT expr  (74)
	binary_operation : expr . GEQ expr  (75)
	binary_operation : expr . AND expr  (76)
	binary_operation : expr . OR expr  (77)
	binary_operation : expr . CONCAT expr  (78)
	binary_operation : expr . GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN  (79)
	binary_operation : expr . GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN  (80)
	binary_operation : expr . DATA_INSERT expr  (81)
	binary_operation : expr . DATA_REMOVE expr  (82)

	ASSIGN  shift 34
	CONCAT  shift 35
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIVIDE  shift 39
	MOD  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LEQ  shift 44
	GT  shift 45
	GEQ  shift 46
	AND  shift 47
	OR  shift 48
	GRAPH_INSERT  shift 49
	GRAPH_REMOVE  shift 50
	DATA_INSERT  shift 51
	DATA_REMOVE  shift 52
	.  error


state 17
	expr : literal .  (37)

	.  reduce 37


state 18
	expr : complex_literal .  (38)

	.  reduce 38


state 19
	expr : binary_operation .  (39)

	.  reduce 39


state 20
	expr : unary_operation .  (40)

	.  reduce 40


state 21
	expr : built_in_function_call .  (43)

	.  reduce 43


state 22
	complex_literal : node_or_rel_literal .  (50)

	.  reduce 50


state 23
	expr : ID .  (41)
	expr : ID . LPAREN actuals_opt RPAREN  (42)
	expr : ID . ACCESS ID  (45)
	node_or_rel_literal : ID . LBRACKET literal_list RBRACKET  (57)
	built_in_function_call : ID . ACCESS find_many  (85)
	built_in_function_call : ID . ACCESS map_function  (86)
	built_in_function_call : ID . ACCESS neighbors_function  (87)

	LPAREN  shift 29
	LBRACKET  shift 30
	ACCESS  shift 32
	RPAREN  reduce 41
	TERMINATION  reduce 41
	COMMA  reduce 41
	ASSIGN  reduce 41
	CONCAT  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	TIMES  reduce 41
	DIVIDE  reduce 41
	MOD  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	GRAPH_INSERT  reduce 41
	GRAPH_REMOVE  reduce 41
	DATA_INSERT  reduce 41
	DATA_REMOVE  reduce 41


state 24
	expr : LPAREN expr . RPAREN  (44)
	binary_operation : expr . PLUS expr  (65)
	binary_operation : expr . MINUS expr  (66)
	binary_operation : expr . TIMES expr  (67)
	binary_operation : expr . DIVIDE expr  (68)
	binary_operation : expr . MOD expr  (69)
	binary_operation : expr . EQ expr  (70)
	binary_operation : expr . NEQ expr  (71)
	binary_operation : expr . LT expr  (72)
	binary_operation : expr . LEQ expr  (73)
	binary_operation : expr . GT expr  (74)
	binary_operation : expr . GEQ expr  (75)
	binary_operation : expr . AND expr  (76)
	binary_operation : expr . OR expr  (77)
	binary_operation : expr . CONCAT expr  (78)
	binary_operation : expr . GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN  (79)
	binary_operation : expr . GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN  (80)
	binary_operation : expr . DATA_INSERT expr  (81)
	binary_operation : expr . DATA_REMOVE expr  (82)

	RPAREN  shift 53
	CONCAT  shift 35
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIVIDE  shift 39
	MOD  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LEQ  shift 44
	GT  shift 45
	GEQ  shift 46
	AND  shift 47
	OR  shift 48
	GRAPH_INSERT  shift 49
	GRAPH_REMOVE  shift 50
	DATA_INSERT  shift 51
	DATA_REMOVE  shift 52
	.  error


state 25
	complex_literal : LPAREN graph_component_list . RPAREN  (51)
	graph_component_list : graph_component_list . COMMA graph_component  (54)

	RPAREN  shift 54
	COMMA  shift 55
	.  error


state 26
	binary_operation : expr . PLUS expr  (65)
	binary_operation : expr . MINUS expr  (66)
	binary_operation : expr . TIMES expr  (67)
	binary_operation : expr . DIVIDE expr  (68)
	binary_operation : expr . MOD expr  (69)
	binary_operation : expr . EQ expr  (70)
	binary_operation : expr . NEQ expr  (71)
	binary_operation : expr . LT expr  (72)
	binary_operation : expr . LEQ expr  (73)
	binary_operation : expr . GT expr  (74)
	binary_operation : expr . GEQ expr  (75)
	binary_operation : expr . AND expr  (76)
	binary_operation : expr . OR expr  (77)
	binary_operation : expr . CONCAT expr  (78)
	binary_operation : expr . GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN  (79)
	binary_operation : expr . GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN  (80)
	binary_operation : expr . DATA_INSERT expr  (81)
	binary_operation : expr . DATA_REMOVE expr  (82)
	unary_operation : MINUS expr .  (84)

	.  reduce 84


state 27
	binary_operation : expr . PLUS expr  (65)
	binary_operation : expr . MINUS expr  (66)
	binary_operation : expr . TIMES expr  (67)
	binary_operation : expr . DIVIDE expr  (68)
	binary_operation : expr . MOD expr  (69)
	binary_operation : expr . EQ expr  (70)
	binary_operation : expr . NEQ expr  (71)
	binary_operation : expr . LT expr  (72)
	binary_operation : expr . LEQ expr  (73)
	binary_operation : expr . GT expr  (74)
	binary_operation : expr . GEQ expr  (75)
	binary_operation : expr . AND expr  (76)
	binary_operation : expr . OR expr  (77)
	binary_operation : expr . CONCAT expr  (78)
	binary_operation : expr . GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN  (79)
	binary_operation : expr . GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN  (80)
	binary_operation : expr . DATA_INSERT expr  (81)
	binary_operation : expr . DATA_REMOVE expr  (82)
	unary_operation : NOT expr .  (83)

	.  reduce 83


state 28
	function_declaration : FUNCTION ID . LPAREN formal_parameters RPAREN ARROW return_type LBRACE statements RBRACE  (19)

	LPAREN  shift 56
	.  error


state 29
	expr : ID LPAREN . actuals_opt RPAREN  (42)
	actuals_opt : .  (61)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	RPAREN  reduce 61

	expr  goto 57
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	actuals_opt  goto 58
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22
	actuals_list  goto 59


state 30
	node_or_rel_literal : ID LBRACKET . literal_list RBRACKET  (57)
	literal_list : .  (58)

	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	RBRACKET  reduce 58
	COMMA  reduce 58

	literal  goto 60
	literal_list  goto 61


state 31
	var_declaration : ID COLON . n2n_type  (4)
	var_declaration : ID COLON . complex_type ASSIGN LBRACE formal_list RBRACE  (5)
	var_declaration : ID COLON . complex_type ASSIGN expr  (7)
	var_declaration : ID COLON . primitive_type ASSIGN expr  (8)

	GRAPH  shift 62
	REL  shift 63
	NODE  shift 64
	INT  shift 65
	DOUBLE  shift 66
	STRING  shift 67
	BOOL  shift 68
	.  error

	n2n_type  goto 69
	complex_type  goto 70
	primitive_type  goto 71


state 32
	expr : ID ACCESS . ID  (45)
	built_in_function_call : ID ACCESS . find_many  (85)
	built_in_function_call : ID ACCESS . map_function  (86)
	built_in_function_call : ID ACCESS . neighbors_function  (87)

	MAP  shift 72
	FINDMANY  shift 73
	NEIGHBORS  shift 74
	ID  shift 75
	.  error

	find_many  goto 76
	map_function  goto 77
	neighbors_function  goto 78


state 33
	global_var_declaration : var_declaration TERMINATION .  (9)

	.  reduce 9


state 34
	var_declaration : expr ASSIGN . expr  (6)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 79
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 35
	binary_operation : expr CONCAT . expr  (78)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 80
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 36
	binary_operation : expr PLUS . expr  (65)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 81
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 37
	binary_operation : expr MINUS . expr  (66)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 82
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 38
	binary_operation : expr TIMES . expr  (67)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 83
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 39
	binary_operation : expr DIVIDE . expr  (68)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 84
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 40
	binary_operation : expr MOD . expr  (69)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 85
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 41
	binary_operation : expr EQ . expr  (70)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 86
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 42
	binary_operation : expr NEQ . expr  (71)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 87
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 43
	binary_operation : expr LT . expr  (72)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 88
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 44
	binary_operation : expr LEQ . expr  (73)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 89
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 45
	binary_operation : expr GT . expr  (74)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 90
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 46
	binary_operation : expr GEQ . expr  (75)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 91
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 47
	binary_operation : expr AND . expr  (76)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 92
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 48
	binary_operation : expr OR . expr  (77)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 93
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 49
	binary_operation : expr GRAPH_INSERT . LPAREN graph_type graph_type graph_type RPAREN  (79)

	LPAREN  shift 94
	.  error


state 50
	binary_operation : expr GRAPH_REMOVE . LPAREN graph_type graph_type graph_type RPAREN  (80)

	LPAREN  shift 95
	.  error


state 51
	binary_operation : expr DATA_INSERT . expr  (81)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 96
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 52
	binary_operation : expr DATA_REMOVE . expr  (82)

	LPAREN  shift 4
	MINUS  shift 5
	NOT  shift 6
	INT_LITERAL  shift 8
	STRING_LITERAL  shift 9
	ID  shift 23
	DOUBLE_LITERAL  shift 11
	BOOL_LITERAL  shift 12
	.  error

	expr  goto 97
	literal  goto 17
	complex_literal  goto 18
	binary_operation  goto 19
	unary_operation  goto 20
	built_in_function_call  goto 21
	node_or_rel_literal  goto 22


state 53
	expr : LPAREN expr RPAREN .  (44)

	.  reduce 44


state 54
	complex_literal : LPAREN graph_component_list RPAREN .  (51)

	.  reduce 51


state 55
	graph_component_list : graph_component_list COMMA . graph_component  (54)

	ID  shift 98
	.  error

	node_or_rel_literal  goto 99
	graph_component  goto 100
	graph_type  goto 101


state 56
	function_declaration : FUNCTION ID LPAREN . formal_parameters RPAREN ARROW return_type LBRACE statements RBRACE  (19)
	formal_parameters : .  (20)

	ID  shift 102
	RPAREN  reduce 20

	formal_list  goto 103
	formal_parameters  goto 104
	parameter  goto 105


state 57
	actuals_list : expr .  (63)
	binary_operation : expr . PLUS expr  (65)
	binary_operation : expr . MINUS expr  (66)
	binary_operation : expr . TIMES expr  (67)
	binary_operation : expr . DIVIDE expr  (68)
	binary_operation : expr . MOD expr  (69)
	binary_operation : expr . EQ expr  (70)
	binary_operation : expr . NEQ expr  (71)
	binary_operation : expr . LT expr  (72)
	binary_operation : expr . LEQ expr  (73)
	binary_operation : expr . GT expr  (74)
	binary_operation : expr . GEQ expr  (75)
	binary_operation : expr . AND expr  (76)
	binary_operation : expr . OR expr  (77)
	binary_operation : expr . CONCAT expr  (78)
	binary_operation : expr . GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN  (79)
	binary_operation : expr . GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN  (80)
	binary_operation : expr . DATA_INSERT expr  (81)
	binary_operation : expr . DATA_REMOVE expr  (82)

	CONCAT  shift 35
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIVIDE  shift 39
	MOD  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LEQ  shift 44
	GT  shift 45
	GEQ  shift 46
	AND  shift 47
	OR  shift 48
	GRAPH_INSERT  shift 49
	GRAPH_REMOVE  shift 50
	DATA_INSERT  shift 51
	DATA_REMOVE  shift 52
	RPAREN  reduce 63
	COMMA  reduce 63


state 58
	expr : ID LPAREN actuals_opt . RPAREN  (42)

	RPAREN  shift 106
	.  error


state 59
	actuals_opt : actuals_list .  (62)
	actuals_list : actuals_list . COMMA expr  (64)

	COMMA  shift 107
	RPAREN  reduce 62


state 60
	literal_list : literal .  (59)

	.  reduce 59


state 61
	node_or_rel_literal : ID LBRACKET literal_list . RBRACKET  (57)
	literal_list : literal_list . COMMA literal  (60)

	RBRACKET  shift 108
	COMMA  shift 109
	.  error


state 62
	complex_type : GRAPH .  (16)

	.  reduce 16


state 63
	complex_type : REL .  (18)

	.  reduce 18


state 64
	complex_type : NODE .  (17)

	.  reduce 17


state 65
	primitive_type : INT .  (12)

	.  reduce 12


state 66
	primitive_type : DOUBLE .  (14)

	.  reduce 14


state 67
	primitive_type : STRING .  (13)

	.  reduce 13


state 68
	primitive_type : BOOL .  (15)

	.  reduce 15


state 69
	var_declaration : ID COLON n2n_type .  (4)

	.  reduce 4


state 70
	var_declaration : ID COLON complex_type . ASSIGN LBRACE formal_list RBRACE  (5)
	var_declaration : ID COLON complex_type . ASSIGN expr  (7)
	n2n_type : complex_type .  (11)

	ASSIGN  shift 110
	TERMINATION  reduce 11


state 71
	var_declaration : ID COLON primitive_type . ASSIGN expr  (8)
	n2n_type : primitive_type .  (10)

	ASSIGN  shift 111
	TERMINATION  reduce 10


state 72
	map_function : MAP . LPAREN ID IN LBRACE statements RBRACE RPAREN  (88)

	LPAREN  shift 112
	.  error


state 73
	find_many : FINDMANY . LPAREN node_or_rel_literal RPAREN  (90)
	find_many : FINDMANY . LPAREN graph_type COMMA graph_type RPAREN  (91)

	LPAREN  shift 113
	.  error


state 74
	neighbors_function : NEIGHBORS . LPAREN ID RPAREN  (89)

	LPAREN  shift 114
	.  error


state 75
	expr : ID ACCESS ID .  (45)

	.  reduce 45


state 76
	built_in_function_call : ID ACCESS find_many .  (85)

	.  reduce 85


state 77
	built_in_function_call : ID ACCESS map_function .  (86)

	.  reduce 86


state 78
	built_in_function_call : ID ACCESS neighbors_function .  (87)

	.  reduce 87


state 79
	var_declaration : expr ASSIGN expr .  (6)
	binary_operation : expr . PLUS expr  (65)
	binary_operation : expr . MINUS expr  (66)
	binary_operation : expr . TIMES expr  (67)
	binary_operation : expr . DIVIDE expr  (68)
	binary_operation : expr . MOD expr  (69)
	binary_operation : expr . EQ expr  (70)
	binary_operation : expr . NEQ expr  (71)
	binary_operation : expr . LT expr  (72)
	binary_operation : expr . LEQ expr  (73)
	binary_operation : expr . GT expr  (74)
	binary_operation : expr . GEQ expr  (75)
	binary_operation : expr . AND expr  (76)
	binary_operation : expr . OR expr  (77)
	binary_operation : expr . CONCAT expr  (78)
	binary_operation : expr . GRAPH_INSERT LPAREN graph_type graph_type graph_type RPAREN  (79)
	binary_operation : expr . GRAPH_REMOVE LPAREN graph_type graph_type graph_type RPAREN  (80)
	binary_operation : expr . DATA_INSERT expr  (81)
	binary_operation : expr . DATA_REMOVE expr  (82)

	CONCAT  shift 35
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIVIDE  shift 39
	MOD  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LEQ  shift 44
	GT  shift 45
	GEQ  shift 46
	AND  shift 47
	OR  shift 48
	GRAPH_INSERT  shift 49
	GRAPH_REMOVE  shift 50
	DATA_INSERT  shift 51
	DATA_REMOVE  shift 52
	TERMINATION  reduce 6

